--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
+
   },
   "private": true,
   "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
+    "node": "10.15.3",
+    "npm": "6.4.1"
   },
   "dependencies": {
     "@angular/animations": "~7.2.0",
