--- a/package.json
+++ b/package.json
@@ -1,63 +1,78 @@
 {
-  "name": "muvie",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
-  },
-  "private": true,
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
-  },
-  "dependencies": {
-    "@angular/animations": "^7.2.13",
-    "@angular/cdk": "^7.3.7",
-    "@angular/cli": "^7.3.8",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "^7.2.12",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "body-parser": "^1.18.3",
-    "core-js": "^2.5.4",
-    "express": "^4.16.4",
-    "hammerjs": "^2.0.8",
-    "mongodb": "^3.2.3",
-    "path": "^0.12.7",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "typescript": "~3.2.2",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.12",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
-  }
+    "name": "muvie",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "node server.js",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "heroku-postbuild": "ng build --prod"
+    },
+    "private": true,
+    "engines": {
+        "node": "10.15.3",
+        "npm": "6.4.1"
+    },
+    "dependencies": {
+        "@angular/animations": "^7.2.13",
+        "@angular/cdk": "^7.3.7",
+        "@angular/cli": "^7.3.8",
+        "@angular/common": "~7.2.0",
+        "@angular/compiler": "~7.2.0",
+        "@angular/compiler-cli": "^7.2.12",
+        "@angular/core": "~7.2.0",
+        "@angular/forms": "~7.2.0",
+        "@angular/material": "^7.3.7",
+        "@angular/platform-browser": "~7.2.0",
+        "@angular/platform-browser-dynamic": "~7.2.0",
+        "@angular/router": "~7.2.0",
+        "@fortawesome/angular-fontawesome": "^0.3.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.17",
+        "@fortawesome/free-solid-svg-icons": "^5.8.1",
+        "@types/socket.io": "^2.1.2",
+        "async": "^2.6.2",
+        "aws-sdk": "^2.440.0",
+        "body-parser": "^1.18.3",
+        "core-js": "^2.5.4",
+        "dotenv": "^7.0.0",
+        "express": "^4.16.4",
+        "express-formidable": "^1.2.0",
+        "ffmpeg": "0.0.4",
+        "file-system": "^2.2.2",
+        "fluent-ffmpeg": "^2.1.2",
+        "hammerjs": "^2.0.8",
+        "mongodb": "^3.2.3",
+        "ngx-audio-player": "^7.1.3",
+        "ngx-socket-io": "^2.1.1",
+        "path": "^0.12.7",
+        "rxjs": "~6.3.3",
+        "socket.io": "^2.2.0",
+        "tslib": "^1.9.0",
+        "typescript": "~3.2.2",
+        "video-stitch": "^1.6.0",
+        "zone.js": "~0.8.26"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.13.0",
+        "@angular/cli": "^7.3.8",
+        "@angular/compiler-cli": "^7.2.12",
+        "@angular/language-service": "~7.2.0",
+        "@types/jasmine": "~2.8.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "codelyzer": "~4.5.0",
+        "jasmine-core": "~2.99.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~1.1.2",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.11.0",
+        "typescript": "~3.2.2"
+    }
 }
