--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "path": "^0.12.7",
         "rxjs": "~6.3.3",
         "socket.io": "^2.2.0",
+        "stripe": "^7.3.0",
         "tslib": "^1.9.0",
         "typescript": "~3.2.2",
         "video-stitch": "^1.6.0",
