--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/socket.io": "^2.1.2",
         "async": "^2.6.2",
         "aws-sdk": "^2.440.0",
+        "axios": "^0.19.0",
         "body-parser": "^1.18.3",
         "core-js": "^2.5.4",
         "dotenv": "^7.0.0",
