--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "ngx-disqus": "^2.4.3",
         "ngx-socket-io": "^2.1.1",
         "path": "^0.12.7",
+        "request": "^2.88.0",
         "rxjs": "~6.3.3",
         "socket.io": "^2.2.0",
         "stripe": "^7.3.0",
