--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "mongodb": "^3.2.3",
         "ngx-audio-player": "^7.1.3",
         "ngx-disqus": "^2.4.3",
+        "ngx-google-analytics": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
         "path": "^0.12.7",
         "request": "^2.88.0",
