--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "dotenv": "^7.0.0",
         "express": "^4.16.4",
         "express-formidable": "^1.2.0",
+        "express-sslify": "^1.2.0",
         "ffmpeg": "0.0.4",
         "file-system": "^2.2.2",
         "fluent-ffmpeg": "^2.1.2",
