--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "file-system": "^2.2.2",
         "fluent-ffmpeg": "^2.1.2",
         "hammerjs": "^2.0.8",
+        "heroku-ssl-redirect": "0.0.4",
         "mongodb": "^3.2.3",
         "ngx-audio-player": "^7.1.3",
         "ngx-disqus": "^2.4.3",
