--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@angular/compiler-cli": "^7.2.12",
         "@angular/core": "~7.2.0",
         "@angular/forms": "~7.2.0",
-        "@angular/material": "^7.3.7",
+        "@angular/material": "7.2.0",
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
