--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
         "ngx-disqus": "^2.4.3",
         "ngx-google-analytics": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
+        "p5": "^0.8.0",
         "path": "^0.12.7",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
         "socket.io": "^2.2.0",
         "stripe": "^7.3.0",
         "tslib": "^1.9.0",
+        "twilio": "^3.33.1",
         "typescript": "~3.2.2",
         "video-stitch": "^1.6.0",
         "zone.js": "~0.8.26"
