--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
         "fluent-ffmpeg": "^2.1.2",
         "hammerjs": "^2.0.8",
         "heroku-ssl-redirect": "0.0.4",
+        "image-capture": "^0.4.0",
         "mongodb": "^3.2.3",
+        "nativescript-flashlight": "^2.0.1",
         "ngx-audio-player": "^7.1.3",
         "ngx-disqus": "^2.4.3",
         "ngx-google-analytics": "^8.0.0",
