--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.17",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
         "@types/socket.io": "^2.1.2",
+        "@zxing/ngx-scanner": "^2.0.0",
         "async": "^2.6.2",
         "aws-sdk": "^2.440.0",
         "axios": "^0.19.0",
@@ -48,7 +49,6 @@
         "heroku-ssl-redirect": "0.0.4",
         "image-capture": "^0.4.0",
         "mongodb": "^3.2.3",
-        "nativescript-flashlight": "^2.0.1",
         "ngx-audio-player": "^7.1.3",
         "ngx-disqus": "^2.4.3",
         "ngx-google-analytics": "^8.0.0",
