--- a/.env.sample
+++ b/.env.sample
@@ -8,4 +8,4 @@ KEYSTORE=FFFFFF
 ENVIRONMENT=development
 TWILIO_SID=GGGGG
 TWILIO_AUTH_TOKEN=HHHHH
-CROWD_SCREEN_URL=http://192.168.1.132
+CROWD_SCREEN_URL=localhost
