--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "image-capture": "^0.4.0",
         "mongodb": "^3.2.3",
         "ngx-audio-player": "^7.1.3",
+        "ngx-device-detector": "^1.3.11",
         "ngx-disqus": "^2.4.3",
         "ngx-google-analytics": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
