cloud upload endpoints

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,8 @@ TEST=1
 AWS_ACCESS_KEY_ID=AAAAAAA
 AWS_SECRET_ACCESS_KEY=BBBBBB
 S3_BUCKET=CCCCCC
+S3_BUCKET_VISUALZ=IIII
+S3_DIR_VISUALZ=JJJJJ
 STRIPE_KEY=sk_live_DDDDD
 STRIPE_TEST_KEY=sk_test_EEEEE
 KEYSTORE=FFFFFF
