--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "file-system": "^2.2.2",
         "fluent-ffmpeg": "^2.1.2",
         "hammerjs": "^2.0.8",
+        "helmet": "^3.21.2",
         "heroku-ssl-redirect": "0.0.4",
         "image-capture": "^0.4.0",
         "mongodb": "^3.2.3",
