--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,5 @@ ENVIRONMENT=development
 TWILIO_SID=GGGGG
 TWILIO_AUTH_TOKEN=HHHHH
 CROWD_SCREEN_URL=localhost
+AUTH0_CLIENT_ID=asdfasfdasdfasfasf
+AUTH0_DOMAIN=dev-asdfasdf.auth0.com
