--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
         "@angular/compiler-cli": "^7.2.12",
         "@angular/core": "~7.2.0",
         "@angular/forms": "~7.2.0",
+        "@angular/http": "~7.2.0",
         "@angular/material": "7.2.0",
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
+        "@auth0/angular-jwt": "^3.0.1",
+        "@auth0/auth0-spa-js": "^1.6.0",
         "@fortawesome/angular-fontawesome": "^0.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.17",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
         "@types/socket.io": "^2.1.2",
         "@zxing/ngx-scanner": "^2.0.0",
+        "angular2-jwt": "^0.1.27",
         "async": "^2.6.2",
         "aws-sdk": "^2.440.0",
         "axios": "^0.19.0",
@@ -59,6 +63,7 @@
         "path": "^0.12.7",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
+        "rxjs-compat": "^6.5.3",
         "socket.io": "^2.2.0",
         "stripe": "^7.3.0",
         "tslib": "^1.9.0",
@@ -75,6 +80,7 @@
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
+        "@types/rx": "^4.1.1",
         "codelyzer": "~4.5.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
