--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "express-formidable": "^1.2.0",
         "express-sslify": "^1.2.0",
         "ffmpeg": "0.0.4",
+        "ffmpeg-extract-frame": "^1.0.2",
         "file-system": "^2.2.2",
         "fluent-ffmpeg": "^2.1.2",
         "hammerjs": "^2.0.8",
