--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "@types/socket.io": "^2.1.2",
         "@zxing/ngx-scanner": "^2.0.0",
         "angular2-jwt": "^0.1.27",
-        "async": "^2.6.2",
+        "async": "^2.6.3",
         "aws-sdk": "^2.440.0",
         "axios": "^0.19.0",
         "body-parser": "^1.18.3",
@@ -60,6 +60,7 @@
         "ngx-disqus": "^2.4.3",
         "ngx-google-analytics": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
+        "node-fetch": "^2.6.0",
         "p5": "^0.8.0",
         "path": "^0.12.7",
         "request": "^2.88.0",
@@ -70,6 +71,7 @@
         "tslib": "^1.9.0",
         "twilio": "^3.33.1",
         "typescript": "~3.2.2",
+        "unsplash-js": "^6.0.0",
         "video-stitch": "^1.6.0",
         "zone.js": "~0.8.26"
     },
