--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "ngx-google-analytics": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
         "node-fetch": "^2.6.0",
+        "node-pexels": "0.0.5",
         "p5": "^0.8.0",
         "path": "^0.12.7",
         "request": "^2.88.0",
