--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "node-pexels": "0.0.5",
         "p5": "^0.8.0",
         "path": "^0.12.7",
+        "peerjs": "^1.2.0",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
         "rxjs-compat": "^6.5.3",
