--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/socket.io": "^2.1.2",
         "@zxing/ngx-scanner": "^2.0.0",
         "angular2-jwt": "^0.1.27",
+        "angular-gridster2": "^7.2.0",
         "async": "^2.6.3",
         "aws-sdk": "^2.440.0",
         "axios": "^0.19.0",
@@ -70,6 +71,7 @@
         "rxjs-compat": "^6.5.3",
         "socket.io": "^2.2.0",
         "stripe": "^7.3.0",
+        "three": "^0.71.0",
         "tslib": "^1.9.0",
         "twilio": "^3.33.1",
         "typescript": "~3.2.2",
