--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "rxjs": "~6.3.3",
         "rxjs-compat": "^6.5.3",
         "socket.io": "^2.2.0",
+        "stats-js": "^1.0.1",
         "stripe": "^7.3.0",
         "three": "^0.71.0",
         "tslib": "^1.9.0",
