--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "node-pexels": "0.0.5",
         "p5": "^0.8.0",
         "path": "^0.12.7",
+        "peer": "^0.5.1",
         "peerjs": "^1.2.0",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
