--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "muvie",
-    "version": "0.0.0",
+    "version": "2.0.7",
     "scripts": {
         "ng": "ng",
         "start": "node server.js",
@@ -35,6 +35,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.17",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
         "@types/socket.io": "^2.1.2",
+        "@types/mixpanel-browser": "^2.23.2",
         "@zxing/ngx-scanner": "^2.0.0",
         "angular2-jwt": "^0.1.27",
         "angular-gridster2": "^7.2.0",
@@ -55,6 +56,7 @@
         "helmet": "^3.21.2",
         "heroku-ssl-redirect": "0.0.4",
         "image-capture": "^0.4.0",
+        "mixpanel-browser": "^2.29.1",
         "mongodb": "^3.2.3",
         "ngx-audio-player": "^7.1.3",
         "ngx-device-detector": "^1.3.11",
@@ -67,6 +69,7 @@
         "path": "^0.12.7",
         "peer": "^0.5.1",
         "peerjs": "^1.2.0",
+        "qrcode": "^1.4.4",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
         "rxjs-compat": "^6.5.3",
