--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "muvie",
-    "version": "2.0.7",
+    "version": "2.0.6",
     "scripts": {
         "ng": "ng",
         "start": "node server.js",
@@ -34,11 +34,12 @@
         "@fortawesome/angular-fontawesome": "^0.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.17",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
-        "@types/socket.io": "^2.1.2",
         "@types/mixpanel-browser": "^2.23.2",
+        "@types/qrcode": "^1.3.4",
+        "@types/socket.io": "^2.1.2",
         "@zxing/ngx-scanner": "^2.0.0",
-        "angular2-jwt": "^0.1.27",
         "angular-gridster2": "^7.2.0",
+        "angular2-jwt": "^0.1.27",
         "async": "^2.6.3",
         "aws-sdk": "^2.440.0",
         "axios": "^0.19.0",
