--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "image-capture": "^0.4.0",
         "mixpanel-browser": "^2.29.1",
         "mongodb": "^3.2.3",
+        "newrelic": "^6.8.0",
         "ngx-audio-player": "^7.1.3",
         "ngx-device-detector": "^1.3.11",
         "ngx-disqus": "^2.4.3",
