--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
                         "tsConfig": "src/tsconfig.app.json",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets",
-                            "newrelic.js"
+                            "src/assets"
                         ],
                         "styles": [
                             "src/styles.scss"
