--- a/package.json
+++ b/package.json
@@ -71,10 +71,13 @@
         "path": "^0.12.7",
         "peer": "^0.5.1",
         "peerjs": "^1.2.0",
+        "pg": "^8.3.3",
+        "pg-hstore": "^2.3.3",
         "qrcode": "^1.4.4",
         "request": "^2.88.0",
         "rxjs": "~6.3.3",
         "rxjs-compat": "^6.5.3",
+        "sequelize": "^6.3.5",
         "socket.io": "^2.2.0",
         "stats-js": "^1.0.1",
         "stripe": "^7.3.0",
