--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
+        "@angular/youtube-player": "^11.0.0",
         "@auth0/angular-jwt": "^3.0.1",
         "@auth0/auth0-spa-js": "^1.6.0",
         "@fortawesome/angular-fontawesome": "^0.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.17",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
+        "@stripe/stripe-js": "^1.9.0",
         "@types/mixpanel-browser": "^2.23.2",
         "@types/qrcode": "^1.3.4",
         "@types/socket.io": "^2.1.2",
@@ -57,7 +59,9 @@
         "helmet": "^3.21.2",
         "heroku-ssl-redirect": "0.0.4",
         "image-capture": "^0.4.0",
+        "install": "^0.13.0",
         "mailchimp-api-v3": "^1.14.0",
+        "mandrill-api": "^1.0.45",
         "md5": "^2.3.0",
         "mixpanel-browser": "^2.29.1",
         "mongodb": "^3.2.3",
@@ -69,6 +73,7 @@
         "ngx-socket-io": "^2.1.1",
         "node-fetch": "^2.6.0",
         "node-pexels": "0.0.5",
+        "npm": "^6.14.8",
         "p5": "^0.8.0",
         "path": "^0.12.7",
         "peer": "^0.5.1",
@@ -76,13 +81,14 @@
         "pg": "^8.3.3",
         "pg-hstore": "^2.3.3",
         "qrcode": "^1.4.4",
-        "request": "^2.88.0",
+        "request": "^2.88.2",
+        "request-promise-native": "^1.0.9",
         "rxjs": "~6.3.3",
         "rxjs-compat": "^6.5.3",
         "sequelize": "^6.3.5",
         "socket.io": "^2.2.0",
         "stats-js": "^1.0.1",
-        "stripe": "^7.3.0",
+        "stripe": "^8.45.0",
         "three": "^0.71.0",
         "tslib": "^1.9.0",
         "twilio": "^3.33.1",
