--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     },
     "private": true,
     "engines": {
-        "node": "14.15.4",
-        "npm": "6.4.1"
+        "node": "14.15.4"
     },
     "dependencies": {
         "@angular/animations": "^7.2.13",
